<resources>
    <string name="app_name">praktika</string>
    <string name="_20">ПІ-20</string>
    <string name="_пн">пн</string>
    <string name="ВІ">ВІВ</string>
    <string name="ПН">ПНП</string>
    <string name="ПІ20">ПІ-20</string>
    <string name="ПІ_20">ПІ_20</string>
    <string name="сер">се</string>
    <string name="се">сер</string>
    <string name="ЧЕТ">ЧЕ</string>
    <string name="ЧЕT">ЧЕ</string>
    <string name="ЧЕ">ЧЕТ</string>
    <string name="ПТ">П\'ЯТ</string>
    <string name="ПІ">ПІ-20</string>
    <string name="Пі20">ПІ-20</string>
    <string name="T1">ПІ-20</string>
    <string name="ПОН">ПОНЕДІЛОК</string>
    <string name="ВІВ">ВІВТОРОК</string>
    <string name="СЕР">СЕРЕДА</string>
    <string name="ЧТВ">ЧЕТВЕРГ</string>
    <string name="ПЯТ">П\'ЯТНИЦЯ</string>
    <string name="Ча">Час</string>
    <string name="Пар">Пари</string>
    <string name="_08_30">08:30</string>
    <string name="_10_00">10:00</string>
    <string name="_08_30_">08:30</string>
    <string name="_10_00_">10:00</string>
    <string name="Пари1">Аналіз вимог до програмного забезпеченння 1415 Грисюк А.В.</string>
    <string name="зак">Закрити</string>
    <string name="_14151">1415</string>
    <string name="пари1">Аналіз вимог до програмного забезпечення</string>
    <string name="Ініціали">Грисюк А.В.</string>
    <string name="Пари2">Аналіз вимог до програмного забезпечення</string>
    <string name="_14152">1415</string>
    <string name="Ініціали2">Грисюк А.В.</string>
    <string name="_08_305">08:30</string>
    <string name="_10_006">10:00</string>
    <string name="Пари3">Аналіз вимог до програмного забезпечення</string>
    <string name="_1415">1415</string>
    <string name="Ініціали3">Грисюк А.В.</string>
    <string name="Пар1">Аналіз вимог до програмного забезпечення \n1415\nГрисюк А.В.</string>
    <string name="Пар2">Аналіз вимог до програмного забезпечення \n1415\nГрисюк А.В.</string>
    <string name="Пар3">Аналіз вимог до програмного забезпечення \n1415\nГрисюк А.В.</string>
</resources>