<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Ча"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ча"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/Пар"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Пар"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Пари1"
        android:layout_width="227dp"
        android:layout_height="90dp"
        android:background="#FFFFFF"
        android:text="@string/Пар1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/time3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08_30_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/time4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/зак"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickClose"
        android:text="@string/зак"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/Пари2"
        android:layout_width="227dp"
        android:layout_height="90dp"
        android:text="@string/Пар2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/time5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08_305"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/time6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_006"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Пари3"
        android:layout_width="227dp"
        android:layout_height="90dp"
        android:text="@string/Пар3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>